--- a/css/main.css
+++ b/css/main.css
@@ -43,10 +43,13 @@ main {
     margin: 50px;
 }
 
-img {
-    transition: .5s;
+h1 {
     -webkit-user-select: none;
     user-select: none;
+}
+
+img {
+    transition: .5s;
     width: 100%;
     height: 100%;
 }
