--- a/maeve-human-portfolio/css/small.css
+++ b/maeve-human-portfolio/css/small.css
@@ -18,19 +18,50 @@ body {
 header {
     display: grid;
     grid-template-columns: 150px 1fr;
+    grid-template-rows: 26px 135px;
     align-items: center;
-    background-color: var(--accent);
+    background: linear-gradient(black 10%, var(--accent) 25%);
+    color: black;
+}
+
+
+#terminal {
+    text-decoration: none;
+    grid-column: 1/3;
+    grid-row: 1;
+    height: 100%;
+    font-family: 'Fira Code', monospace;
+    color: #ed9012;
+    text-align: left;
+}
+
+#terminal>h1 {
+    margin: 10px 0;
+    font-size: 14px;
+}
+
+#terminal>h1::after {
+    content: attr(data-end);
+    animation: typing-blink 1.5s linear 0s infinite;
 }
 
 #logo {
     grid-column: 1;
+    grid-row: 2;
     width: 90%;
     aspect-ratio: 1/1;
     margin: 5%;
 }
 
+header h1 {
+    grid-column: 2;
+    grid-row: 2;
+    margin: .2rem;
+}
+
 #primary-nav {
     grid-column: 1/3;
+    grid-row: 3;
     background-color: var(--secndary);
 }
 
@@ -42,7 +73,7 @@ header {
     padding: .5rem;
 }
 
-.nav-link:hover{
+.nav-link:hover {
     color: black;
     background-color: var(--accent);
 }
@@ -67,6 +98,7 @@ header {
     align-items: center;
     margin: .5rem 0;
 }
+
 #slivers a h1 {
     grid-row: 2;
     margin: auto;
@@ -145,17 +177,20 @@ header {
     margin: .8rem auto;
 }
 
-#prev, #prev-btn {
+#prev,
+#prev-btn {
     max-width: 100%;
     grid-column: 1;
     grid-row: 2;
 }
 
-#next, #next-btn {
+#next,
+#next-btn {
     max-width: 100%;
     grid-column: 3;
     grid-row: 2;
 }
+
 .hidden {
     display: none;
 }
@@ -189,7 +224,7 @@ footer {
     color: var(--accent);
 }
 
-#info h3{
+#info h3 {
     margin: 0;
 }
 
@@ -197,23 +232,62 @@ footer {
     margin: .4rem 0;
 }
 
+@keyframes typing-blink {
+    20% {
+        opacity: 1;
+    }
 
-@media only screen and (min-width: 1028px) {
+    25% {
+        opacity: 0;
+    }
+
+    75% {
+        opacity: 0;
+    }
+
+    80% {
+        opacity: 1;
+    }
+}
+
+@media only screen and (min-width: 561px) {
+    header {
+        background: linear-gradient(black 12%, var(--accent) 25%);
+    }
+
+    #terminal {
+        margin: 0 50px;
+    }
+
+    #terminal>h1 {
+        font-size: 20px;
+    }
+}
+
+@media only screen and (min-width: 1025px) {
     body {
         max-width: 1600px;
     }
 
     header {
-        grid-template-rows: 100px 35px;
+        background: linear-gradient(black 25%, var(--accent) 50%);
+        grid-template-rows: 66px 1fr 36px;
+    }
+    
+    #terminal>h1 {
+        font-size: 27px;
+        padding: 15px;
+        margin: 0;
     }
 
     #logo {
-        grid-row: 1/3;
+        grid-row: 2/4;
+        width: 100%;
+        margin: 0;
     }
 
     #primary-nav {
         grid-column: 2;
-        grid-row: 2;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
     }
@@ -221,7 +295,7 @@ footer {
     .nav-link {
         padding: 5px;
     }
-    
+
     #slivers {
         grid-template-columns: repeat(7, 1fr);
         grid-template-rows: 700px;
@@ -244,7 +318,7 @@ footer {
         grid-template-columns: 1fr 1fr;
     }
 
-    #info h3{
+    #info h3 {
         letter-spacing: .2rem;
     }
 }
