--- a/bountiful-foods/css/small.css
+++ b/bountiful-foods/css/small.css
@@ -46,15 +46,38 @@ img {
 header {
     display: grid;
     grid-template-columns: 50px 1fr 60px;
-    background-color: var(--primary-color);
+    grid-template-rows: 26px;
     align-items: center;
     text-align: center;
     position: sticky;
     top: 0;
     z-index: 100;
+    background: linear-gradient(black 20px, var(--primary-color) 60px);
+}
+
+#terminal {
+    text-decoration: none;
+    grid-column: 1/3;
+    grid-row: 1;
+    height: 100%;
+    color: #ed9012;
+    text-align: left;
+}
+
+#terminal>h1 {
+    font-family: 'Fira Code', monospace;
+    margin: 10px 0;
+    font-size: 14px;
+}
+
+#terminal>h1::after {
+    content: attr(data-end);
+    animation: typing-blink 1.5s linear 0s infinite;
 }
 
 #top-logo {
+    grid-column: 1;
+    grid-row: 2;
     width: 50px;
     aspect-ratio: 1/1;
     margin: 2% 0 0 2%;
@@ -62,7 +85,7 @@ header {
 
 #heading {
     grid-column: 2;
-    grid-row: 1;
+    grid-row: 2;
     color: var(--accent-color);
 }
 
@@ -72,6 +95,7 @@ header {
 }
 
 #ham-menu {
+    grid-row: 2;
     height: 100%;
     aspect-ratio: 1/1;
     display: grid;
@@ -102,6 +126,7 @@ header {
 }
 
 #cross-menu {
+    grid-row: 2;
     height: 100%;
     aspect-ratio: 1/1;
     display: grid;
@@ -673,5 +698,23 @@ footer>a>picture>img {
 
     100% {
         z-index: 0;
+    }
+}
+
+@keyframes typing-blink {
+    20% {
+        opacity: 1;
+    }
+
+    25% {
+        opacity: 0;
+    }
+
+    75% {
+        opacity: 0;
+    }
+
+    80% {
+        opacity: 1;
     }
 }
