--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -8,6 +8,13 @@
     header {
         /* max-width: 70rem; */
         margin: 0 auto;
+        background: linear-gradient(black 25%, #061168 50%);
+    }
+    
+    #terminal>h1 {
+        font-size: 27px;
+        padding: 15px;
+        margin: 0;
     }
 
     main,
