--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body img {
   transition: 0.5s;
   width: 100%;
 }
+body a {
+  color: #ed9012;
+}
 
 ::selection {
   background: #0f0e0e;
@@ -20,40 +23,122 @@ header {
 header div {
   max-width: 1400px;
   margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 35px;
+  grid-template-rows: 35px;
 }
-
-#terminal {
-  margin: 0 auto;
+@media (min-width: 560px) {
+  header div {
+    grid-template-columns: 1fr 46px;
+    grid-template-rows: 46px;
+  }
+}
+@media (min-width: 1025px) {
+  header div {
+    grid-template-columns: 1fr 56px;
+    grid-template-rows: 56px;
+  }
+}
+header #terminal {
+  grid-column: 1;
+  margin: 0;
   padding: 0;
+  color: #ed9012;
   font-size: 16px;
   padding: 5px;
 }
 @media (min-width: 560px) {
-  #terminal {
+  header #terminal {
     font-size: 20px;
     padding: 10px;
   }
 }
 @media (min-width: 1025px) {
-  #terminal {
+  header #terminal {
     font-size: 27px;
   }
 }
-#terminal::after {
+header #terminal::after {
   content: attr(data-end);
-  color: #ee8c16;
   animation: typing-blink 1.5s linear 0s infinite;
+}
+header .nav-btn {
+  grid-column: 2;
+  padding: 0;
+  border: none;
+  height: 100%;
+  aspect-ratio: 1/1;
+}
+header #nav {
+  grid-column: 1/3;
+  font-size: 16px;
+}
+@media (min-width: 560px) {
+  header #nav {
+    font-size: 20px;
+  }
+}
+@media (min-width: 1025px) {
+  header #nav {
+    font-size: 27px;
+  }
+}
+header #nav ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+header #nav li {
+  display: inline-block;
+}
+header #nav a {
+  display: block;
+  text-decoration: none;
+  transition: 0.5s;
+  border-bottom: 2px solid transparent;
+}
+@media (min-width: 1025px) {
+  header #nav a {
+    border-bottom: 3px solid transparent;
+  }
+}
+header #nav a:hover {
+  border-bottom: 2px solid #ed9012;
+}
+@media (min-width: 1025px) {
+  header #nav a:hover {
+    border-bottom: 3px solid #ed9012;
+  }
+}
+header #nav .active {
+  background: #ed9012;
+  color: #0f0e0e;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 1px #ed9012, 0 0 8px 3px #ac6a0c, 0 0 10px 5px #6d4308;
+}
+header #nav #home {
+  grid-column: 1;
+}
+header #nav #transcript {
+  grid-column: 2;
+}
+header #nav #resume {
+  grid-column: 3;
 }
 
 main {
   max-width: 1400px;
   margin: 0 auto;
 }
+main > div {
+  margin: 50px;
+}
 main #container {
   display: grid;
   grid-template-columns: repeat(8, minmax(30px, 190px));
   gap: 0.5em;
-  margin: 50px;
   justify-content: center;
 }
 main #click {
@@ -61,10 +146,6 @@ main #click {
 }
 main .letter {
   text-decoration: none;
-  text-align: center;
-  color: #ed9012;
-  font-family: "Major Mono Display", monospace;
-  font-size: 12em;
 }
 main .letter:hover {
   z-index: 2;
@@ -154,56 +235,6 @@ main .letter#t {
 main .letter#s {
   grid-column: 8;
   grid-row: 2;
-}
-@media screen and (max-width: 1130px) {
-  main .letter {
-    font-size: 11em;
-  }
-}
-@media screen and (max-width: 1045px) {
-  main .letter {
-    font-size: 10em;
-  }
-}
-@media screen and (max-width: 955px) {
-  main .letter {
-    font-size: 9em;
-  }
-}
-@media screen and (max-width: 870px) {
-  main .letter {
-    font-size: 8em;
-  }
-}
-@media screen and (max-width: 780px) {
-  main .letter {
-    font-size: 7em;
-  }
-}
-@media screen and (max-width: 700px) {
-  main .letter {
-    font-size: 6em;
-  }
-}
-@media screen and (max-width: 610px) {
-  main .letter {
-    font-size: 5em;
-  }
-}
-@media screen and (max-width: 530px) {
-  main .letter {
-    font-size: 4em;
-  }
-}
-@media screen and (max-width: 445px) {
-  main .letter {
-    font-size: 3em;
-  }
-}
-@media screen and (max-width: 370px) {
-  main .letter {
-    font-size: 2em;
-  }
 }
 
 footer {
