--- a/css/style.scss
+++ b/css/style.scss
@@ -106,7 +106,8 @@ header {
         border: none;
         height: 100%;
         aspect-ratio: 1/1;
-
+        background: transparent;
+        cursor: pointer;
     }
 
     #nav {
@@ -125,13 +126,20 @@ header {
         }
 
         ul {
-            display: grid;
+            display: none;
             grid-template-columns: 1fr 1fr 1fr;
 
             margin: 0;
             padding: 0;
 
             text-align: center;
+
+        }
+
+        &.grid {
+            ul {
+                display: grid;
+            }
         }
 
         li {
