--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,30 @@ header .nav-btn {
   background: transparent;
   cursor: pointer;
 }
+@media (min-width: 1025px) {
+  header .nav-btn {
+    display: none;
+  }
+}
+header .nav-btn .line {
+  transition: y 200ms ease-in 200ms, rotate 200ms ease-in, opacity 0ms 200ms;
+  transform-origin: center;
+}
+header .nav-btn.open .line {
+  transition: y 200ms ease-in, rotate 200ms ease-in 200ms, opacity 0ms 200ms;
+}
+header .nav-btn.open :is(.top, .bot) {
+  y: 45;
+}
+header .nav-btn.open .top {
+  rotate: 45deg;
+}
+header .nav-btn.open .mid {
+  opacity: 0;
+}
+header .nav-btn.open .bot {
+  rotate: -45deg;
+}
 header #nav {
   grid-column: 1/3;
   font-size: 16px;
@@ -91,6 +115,11 @@ header #nav ul {
   margin: 0;
   padding: 0;
   text-align: center;
+}
+@media (min-width: 1025px) {
+  header #nav ul {
+    display: grid;
+  }
 }
 header #nav.grid ul {
   display: grid;
